# abac-sgx

./: .gitignore  LICENSE  Makefile  README.md  example_policy.json  launch.sh  mapper.py  policy_config.txt  recompile.sh  sgx_call.py
APETEEt_Enclave_Module/: CMakeLists.txt
APETEEt_Enclave_Module/enclave/: enclave.cpp  enclave.edl
APETEEt_Enclave_Module/include/: enclave.h  wrapper.h
Enclave/: Enclave.cpp  Enclave.h
Mult3Enclave/: Makefile  app  recompile.sh
Mult3Enclave/App/: App.cpp  Enclave_u.c  Enclave_u.h
Mult3Enclave/Enclave/: Enclave.edl  Enclave_t.c  Enclave_t.h
cpython_trials/: make_shared.sh  module.c  myenclave_tester.py  tester.py
flaskr/: __init__.py  applet.py  auth.py  db.py  schema.sql
flaskr/templates/: base.html
flaskr/templates/applet/: index.html
